Fix issue with min width on smaller screens

--- a/_sass/components/page.scss
+++ b/_sass/components/page.scss
@@ -180,7 +180,9 @@ main {
     margin: 0 auto;
 
     @media only screen and (max-width: 1072px) {
-      width: 100%;
+      width:     100%;
+      min-width: 100%;
+	  max-width: 100%;
     }
   }
 
